--- a/aio12/public/common/css/admin-control.css
+++ b/aio12/public/common/css/admin-control.css
@@ -3,3 +3,21 @@
     color: #fff;
     border-radius: 5px;
 }
+
+.main-btn-edit {
+    left: 50%;
+    top: 5px;
+    position: absolute;
+    font-weight: bold;
+    z-index: 10;
+}
+.btn-fast-edit {
+    background-color: #a73102;
+    color: #fff;
+    border-radius: 5px;
+    min-width: 200px;
+    cursor: pointer;
+}
+.btn-fast-edit:hover, .btn-setting:hover {
+    color: #ccc;
+}
