--- a/aio12/public/layouts/01/css/style.css
+++ b/aio12/public/layouts/01/css/style.css
@@ -738,7 +738,7 @@ body {
 }
 
 body {
-    font-family: Raleway, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -747,11 +747,11 @@ body {
 }
 
 .nav>li>a {
-    font-family: Raleway, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .mobile-sidebar-levels-2 .nav>li>ul>li>a {
-    font-family: Raleway, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .nav>li>a,
@@ -785,7 +785,7 @@ h6,
 }
 
 .alt-font {
-    font-family: Raleway, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .alt-font {
