--- a/aio12/public/admin/css/styles.css
+++ b/aio12/public/admin/css/styles.css
@@ -3,78 +3,99 @@
     z-index: 1;
     margin-top: 10px;
 }
+
 .btn-edit-drag-drop a {
     padding-left: 5px;
     padding-right: 5px;
 }
-.loader-inner div{
+
+.loader-inner div {
     background-color: #448aff;
 }
+
 ._hidden {
     display: none;
 }
+
 ._show {
     display: block;
 }
+
 .popup-content {
     min-height: 100px;
 }
+
 .main-loading {
     padding: 20px 0;
     height: 120px;
     text-align: center;
 }
+
 .main-loading .loader-inner {
     display: inline-block;
 }
+
 .img-news {
     width: 100px;
 }
+
 .main-btn-header {
     text-align: right;
 }
+
 .center {
     text-align: center;
 }
+
 ._left {
     float: left;
 }
+
 .img-thumb01 {
     width: 100px;
     float: left;
 }
+
 .item-images img {
     max-width: 100%;
     height: 100px;
 }
+
 .main-btn-header {
     text-align: right;
 }
+
 ._red {
     color: red;
 }
+
 .option-dd-edit {
     position: absolute;
     top: 2px;
     left: 1px;
 }
+
 .option-dd-delete {
     position: absolute;
     top: 2px;
     right: 3px;
 }
-.header-container > nav > ul > li.active {
+
+.header-container>nav>ul>li.active {
     background-color: rgb(0 0 0 / 20%);
 }
+
 ul.ul-img-slide {
     margin-left: -40px;
     margin-top: 10px;
 }
+
 ul.ul-img-slide li {
     list-style: none;
     float: left;
 }
-ul.ul-img-slide li img{
+
+ul.ul-img-slide li img {
     height: 100px;
     width: auto;
     border: 1px #ccc solid;
@@ -82,6 +103,35 @@ ul.ul-img-slide li img{
     margin-bottom: 10px;
     cursor: pointer;
 }
+
 .em {
     color: #9da2a6;
+}
+
+.card {
+    color: #000;
+}
+
+.card-title {
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+}
+
+.font-normal {
+    font-size: 15px;
+    font-weight: normal;
+}
+
+.btn-save {
+    background-color: #e50000;
+    padding: 10px 50px;
+    color: #fff;
+    font-weight: normal;
+    font-size: 18px;
+}
+
+.btn-save:hover {
+    background-color: #f81515;
+    color: #ccc;
 }
