--- a/aio12/public/layouts/01/css/style.css
+++ b/aio12/public/layouts/01/css/style.css
@@ -2301,6 +2301,25 @@ a:hover {
     padding: 10px;
     border: 0px;
 }
+._red {
+    color: red;
+}
+.btn-01 {
+    background-color: #fcca03;
+    color: #000;
+    font-weight: bold;
+}
+.btn-01:hover {
+    background-color: #cea607;
+    color: #fff;
+}
+label, h1, h2, h3, h4, h5, h6, .heading-font {
+    color: #000000;
+}
+.icon-user {
+    cursor: pointer;
+}
+
 
 @media only screen and (max-width: 48em) {
     /*************** ADD MOBILE ONLY CSS HERE  ***************/
