--- a/aio12/public/layouts/01/css/style.css
+++ b/aio12/public/layouts/01/css/style.css
@@ -854,10 +854,6 @@ a:hover {
     padding-top: 100%;
 }
 
-.shop-page-title.featured-title .title-bg {
-    background-image: url(https://gioithieucongty2.ninhbinhweb.site/wp-content/uploads/2023/01/img3.jpg);
-}
-
 @media screen and (min-width: 550px) {
     .products .box-vertical .box-image {
         min-width: 300px !important;
@@ -881,6 +877,22 @@ html {
     letter-spacing: 0;
     color: white;
     font-size: 14px;
+    font-size: 50px;
+}
+.icon-video {
+    color: red;
+    position: absolute;
+    left: 40%;
+    top: 25%;
+    z-index: 2;
+    font-size: 38px;
+    box-shadow: 0 25px 20px 0 rgba(51,51,51,0.25); /* Thêm bóng đổ */
+    border-radius: 50%; /* Nếu muốn bóng tròn */
+    background: #fff;   /* Nếu muốn có nền trắng phía sau icon */
+    padding: 13px;      /* Tùy chỉnh padding cho đẹp */
+}
+.icon-video:hover  {
+    color: red;
 }
 
 .header-block {
@@ -1487,7 +1499,7 @@ html {
     margin-bottom: 0;
 }
 
-.section4 .large-3,
+
 .gioi-thieu-section .large-3 {
     flex-basis: 30%;
     max-width: 20%;
@@ -1800,7 +1812,7 @@ footer.entry-meta {
 }
 
 .blog-single .entry-title {
-    font-size: 40px;
+    font-size: 25px;
 }
 
 .tab-chuc-nang .nav,
@@ -2396,11 +2408,27 @@ h6,
     background-color: #fcca03 !important;
     color: #000 !important;
 }
+
 ._success {
     color: green;
 }
+
 .address-footer {
     min-height: 75px;
+}
+
+.display-4 {
+    font-size: 25px;
+    color: #fcca03;
+    font-weight: bold;
+    font-family: "Open Sans", sans-serif;
+    margin-bottom: 0;
+}
+
+.content {
+    color: #000;
+    line-height: 28px;
+    font-size: 16px;
 }
 
 @media only screen and (max-width: 48em) {
