--- a/aio12/public/layouts/01/css/style.css
+++ b/aio12/public/layouts/01/css/style.css
@@ -1585,6 +1585,7 @@ a.back-to-top {
 
 .footer-section h3 {
     font-size: 16px;
+    width: 300px;
 }
 
 .footer-section .col {
@@ -2429,7 +2430,9 @@ h6,
     line-height: 28px;
     font-size: 16px;
 }
-
+.last-reset {
+    text-align: justify;
+}
 @media only screen and (max-width: 48em) {
     /*************** ADD MOBILE ONLY CSS HERE  ***************/
 
