--- a/aio12/resources/css/admin.css
+++ b/aio12/resources/css/admin.css
@@ -1234,3 +1234,12 @@ ul.menu-header li:first-child {
     margin-left: -30px;
     color: #838282;
 }
+
+.ant-divider-horizontal.ant-divider-with-text::before,
+.ant-divider-horizontal.ant-divider-with-text::after {
+    border-block-start: 1px solid #515151;
+    border-block-start-color: #b1b1b188;
+}
+.ant-divider-inner-text {
+    text-transform: uppercase;
+}
