--- a/aio12/resources/css/admin.css
+++ b/aio12/resources/css/admin.css
@@ -12,7 +12,8 @@
 .main-content {
     /* background: #ffffff; */
     padding: 20px;
-    border-radius: 6px
+    border-radius: 6px;
+    width: 100%;
 }
 
 .cursor {
@@ -1256,4 +1257,8 @@ table.table05 {
 }
 table.table05 tr th{
     text-align: left;
+}
+.ant-layout-content {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    padding: 0px !important;
 }
