--- a/aio12/resources/css/admin.css
+++ b/aio12/resources/css/admin.css
@@ -1262,3 +1262,9 @@ table.table05 tr th{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     padding: 0px !important;
 }
+.title-modal01 {
+    color: #095aca;
+    font-weight: bold;
+    font-size: 18px;
+    text-transform: uppercase;
+}
