--- a/aio12/resources/css/admin.css
+++ b/aio12/resources/css/admin.css
@@ -1181,7 +1181,7 @@ tr.tr-border td {
 }
 
 .btn-submit01 {
-    background-color: rgb(4, 69, 209);
+    background-color: #035fc8;
     font-weight: bold;
     font-size: 14px;
     margin-right: 5px;
