--- a/aio12/resources/css/admin.css
+++ b/aio12/resources/css/admin.css
@@ -1036,6 +1036,8 @@ table.sub-table tr th {
 .title-page {
     font-size: 18px;
     text-transform: uppercase;
+    font-weight: bold;
+    color: #053690;
 }
 
 a.a-icon b {
