--- a/aio12/public/layouts/Aitilen/css/style.css
+++ b/aio12/public/layouts/Aitilen/css/style.css
@@ -528,7 +528,7 @@ html :where(.is-position-sticky) {
 }
 
 .header-bottom {
-    background-color: #013b83;
+    background-color: #a00f0b;
 }
 
 .top-bar-nav>li>a {
@@ -950,8 +950,8 @@ html {
 }
 
 .nav-dropdown li a:hover {
-    color: #fcca00;
-    background-image: url(/layouts/01/icon/arrow-right-svgrepo-com.svg);
+    color: #a00f0b;
+    background-image: url(/layouts/Aitilen/icon/arrow-right-svgrepo-com.png);
     background-size: 16px;
     background-repeat: no-repeat;
     background-position-y: center;
@@ -1009,7 +1009,7 @@ html {
 }
 
 .nav-dropdown {
-    border-bottom: 3px solid #fcca00;
+    border-bottom: 3px solid #a00f0b;
 }
 
 .slider-section .flickity-page-dots {
@@ -1347,7 +1347,7 @@ html {
 .section7 .icon-box .icon-box-img img {
     padding: 0;
     border-radius: 99%;
-    border: 2px solid #fcca00;
+    border: 2px solid #a00f0b;
 }
 
 .section8 .cot2 .col-inner {
@@ -1658,7 +1658,7 @@ a.back-to-top {
 }
 
 .portfolio-summary .box-text {
-    border-bottom: 3px solid #fcca00;
+    border-bottom: 3px solid #a00f0b;
     background: #f5f5f5;
     padding: 30px;
 }
@@ -1671,7 +1671,7 @@ a.back-to-top {
 }
 
 .portfolio-box .box-text {
-    border-bottom: 3px solid #fcca00;
+    border-bottom: 3px solid #a00f0b;
     box-shadow: 0 4px 16px 0 rgb(51 51 51 / 10%);
     padding: 20px;
     text-align: left;
@@ -1682,7 +1682,7 @@ a.back-to-top {
 }
 
 .portfolio-box .portfolio-box-title:hover {
-    color: #fcca00;
+    color: #a00f0b;
 }
 
 .header-nav .header-search a:before,
@@ -1760,7 +1760,7 @@ a.back-to-top {
     padding: 0 20px 20px 20px;
     font-size: 15px;
     color: gray;
-    border-bottom: 3px solid #fcca00;
+    border-bottom: 3px solid #a00f0b;
 }
 
 footer.entry-meta {
@@ -1812,7 +1812,7 @@ footer.entry-meta {
 .single_add_to_cart_button {
     text-transform: none;
     letter-spacing: 0;
-    background: #fcca00 !important;
+    background: #a00f0b !important;
     color: black;
 }
 
@@ -1832,7 +1832,7 @@ footer.entry-meta {
 #comments .comment-respond {
     box-shadow: 0 4px 16px 0 rgb(51 51 51 / 10%);
     background: white;
-    border-bottom: 3px solid #fcca00;
+    border-bottom: 3px solid #a00f0b;
 }
 
 #comments .required-field-message {
@@ -1911,7 +1911,7 @@ span.widget-title:after {
 }
 
 .product-small .price-wrapper bdi {
-    color: #fcca00;
+    color: #a00f0b;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
